# kansei

./: .gitignore  AGENTS.md  LICENSE  README.md  SPEC.md  pyproject.toml
.agents/skills/harnessops-bridge/: SKILL.md  SKILL.md.new
.agents/skills/hops-add-failure/: SKILL.md
.agents/skills/hops-compact-lab-memory/: SKILL.md
.agents/skills/hops-daily-steward/: SKILL.md
.agents/skills/hops-diagnose/: SKILL.md
.agents/skills/hops-export-feedback/: SKILL.md
.agents/skills/hops-github-flow/: SKILL.md
.agents/skills/hops-import-feedback/: SKILL.md
.agents/skills/hops-issue-triage/: SKILL.md
.agents/skills/hops-open-meta-scan/: SKILL.md
.agents/skills/hops-research-improvements/: SKILL.md
.agents/skills/hops-route-feedback/: SKILL.md
.agents/skills/hops-run-lab/: SKILL.md  SKILL.md.new
.agents/skills/hops-update-harness/: SKILL.md
.agents/skills/kansei-control-plane/: SKILL.md
.agents/skills/kansei-release/: SKILL.md
.agents/skills/kansei-repository-maintainer/: SKILL.md
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml
.harness/: manifest.toml
.harnessops/: lock.json  project.toml
docs/: architecture.md  cli.md  get-started.md  mcp.md  provider-contract.md  publishing.md  registries.md  release.md  security.md  update-harness.md
harness-lab/: README.md
harness-lab/records/research-scans/: RS0001-branch-naming-drift-in-public-package-metadata.md
harness-lab/views/: backlog.md  imported-feedback.md  improvements.md  research-scans.md  score-trajectory.md
schemas/: kansei.schema.json  lock.schema.json  manifest.schema.json  projects.schema.json  providers.schema.json
src/kansei/cli/: main.py  (+1 more)
tests/: test_bootstrap.py  test_doctor.py  test_harnessops.py  test_init.py  test_mcp_smoke.py  test_registry.py  test_schemas.py  test_smoke.py  test_status_dashboard_search.py  test_update_harness.py  test_update_notice.py  test_upgrade_chain.py
(+96 files in other folders)
